# AutoSec-Agent

./: .gitignore  README.md  pyproject.toml
agent/: agent.py  main.py
agent/workflows/: cert_graph.py  cmd_injection_llm_graph.py  crypto_graph.py  firmware_graph.py  ida_graph.py  network_graph.py  specialized_vuln_graph.py  vuln_graph.py  vuln_pipeline_graph.py
core/: config.py  model.py  path_guard.py  project_manager.py  state.py
scripts/: ida_export_for_ai.py
tools/: export_ai_generator.py
tools/firmware/: cert_extractor.py  crypto_detection.py  extractor.py  ida_exporter.py
tools/network/: protocol_identifier.py
tools/vuln/: __init__.py  rag_engine.py  taint_analyzer.py  vuln_scanner.py  vuln_scanner_v2.py  xref_tools.py
