[project]
name = "autosec-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openrouter>=0.2.1",
    "python-dotenv>=1.0.0",
    "openai>=2.31.0",
]

[tool.setuptools]
packages = ["agent", "core", "config", "tools"]
